--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,39 @@
 #container a {
   text-decoration: none;
 }
+
+.searchBar {
+  --ion-background-color: #3b7e88;
+  color: white;
+}
+
+.cardStyle {
+  border-radius: 20px;
+  --ion-background-color: #3b7e88;
+
+  span {
+    color: white;
+    font-weight: 300;
+  }
+
+  #temp {
+    font-weight: 300;
+    font-size: 4em;
+    margin: 5px;
+  }
+
+  #locationIcon {
+    color: #f6b844;
+  }
+
+  #date {
+    color: #f6b844;
+  }
+}
+
+.noData {
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
